@@ -283,7 +283,12 @@
 
    Applications menu
 
-            Choose Office->Genius Math Tool.
+            Depending on your operating system and version, the menu item
+           for Genius Mathematics Tool could appear in a number of different
+           places. It can be in the Education, Office, Science, or similar
+           submenu, depending on your particular setup. The menu item name
+           you are looking for is Genius Math Tool. Once you locate this menu
+           item click on it to sart Genius Mathematics Tool.
 
             Note that depending on your system installation this menu item
            may not be available. If it is not, you can open the Run dialog
@@ -2853,7 +2858,7 @@
 
  IsPrime (n)
 
-            Tests primality of integers, for numbers less than 25e9 the
+            Tests primality of integers, for numbers less than 2.5e10 the
            answer is deterministic (if Riemann hypothesis is true). For
            numbers larger, the probability of a false positive depends on 
            IsPrimeMillerRabinReps. That is the probability of false positive
