@@ -190,8 +190,16 @@
           <term><guimenu>Applications</guimenu> menu</term>
           <listitem>
 	    <para>
-              Choose <menuchoice> <guisubmenu>Office</guisubmenu>
-	      <guimenuitem>Genius Math Tool</guimenuitem> </menuchoice>.
+	      Depending on your operating system and version, the
+	      menu item for &app; could appear in a number of different
+	      places.  It can be in the 
+              <guisubmenu>Education</guisubmenu>, 
+              <guisubmenu>Office</guisubmenu>, 
+              <guisubmenu>Science</guisubmenu>, or
+	      similar submenu, depending on your particular setup.
+	      The menu item name you are looking for is
+	      <guimenuitem>Genius Math Tool</guimenuitem>.  Once you locate
+	      this menu item click on it to sart &app;.
             </para>
 	    <para>
 	      Note that depending on your system installation this menu item
