@@ -4,7 +4,7 @@ Type=Application
 Exec=gnome-genius
 Icon=gnome-genius
 Terminal=false
-Categories=Application;GNOME;Scientific;Math;Office;
+Categories=Application;GNOME;Science;Math;Education;
 Mime-Type=text/x-genius;
 _Name=Genius Math Tool
 _Comment=Genius Mathematical Tool and Calculator
