@@ -1,3 +1,13 @@
+Tue Oct 16 10:53:33 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.desktop.in: change Office to Education as per
+	  the vfolder spec (that's still somewhat wrong, but unfortunately
+	  it is as close to standard behaviour as we get).  Also notice
+	  that the Scientific category was wrong.  "Science" is correct
+	  as per spec.
+
+	* help/C/genius.xml: update the manual for where to find the icon.
+
 Sun Oct 14 10:10:11 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: add Adrian E. Feiguin to the authors
